--- a/HTML5-CSS3-Part.1/produtos/produtos.html
+++ b/HTML5-CSS3-Part.1/produtos/produtos.html
@@ -45,5 +45,10 @@
             </li>
         </ul>
     </main>
+
+    <footer>
+        <img src="logo-branco.png" alt="logo da barbearia Alura">
+        <p class="copyright">&copy; Copyright Barbearia Alura - 2022</p>
+    </footer>
 </body>
 </html>
