--- a/HTML5-CSS3-Part.1/produtos/produtos.html
+++ b/HTML5-CSS3-Part.1/produtos/produtos.html
@@ -15,9 +15,9 @@
 
             <nav>
                 <ul>
-                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="/HTML5-CSS3-Part.1/index.html">Home</a></li>
                     <li><a href="produtos.html">Produtos</a></li>
-                    <li><a href="#">Contato</a></li>
+                    <li><a href="/HTML5-CSS3-Part.1/contato/contato.html">Contato</a></li>
                 </ul>
             </nav>
         </div>
