--- a/HTML5-CSS3-Part.1/contato/contato.html
+++ b/HTML5-CSS3-Part.1/contato/contato.html
@@ -70,7 +70,34 @@
             -->
             <label for="novidades"><input type="checkbox" id="novidades" class="checkbox" checked> Gostaria de receber nossas novidades por email?</label>
 
-            <input type="submit" value="Enviar Formulário">
+            <input type="submit" value="Enviar Formulário" class="enviar">
+        </form>
+
+        <table>
+            <thead>
+                <tr>
+                    <th>Dia</th>
+                    <th>Horário</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Segunda</td>
+                    <td>8h ~ 20h</td>
+                </tr>
+                <tr>
+                    <td>Quarta</td>
+                    <td>8h ~ 20h</td>
+                </tr>
+                <tr>
+                    <td>Sexta</td>
+                    <td>8h ~ 20h</td>
+                </tr>
+            </tbody>
+            <tfoot>
+                
+            </tfoot>
+        </table>
     </main>
 
     <footer>
