--- a/HTML5-CSS3-Part.1/produtos.html
+++ b/HTML5-CSS3-Part.1/produtos.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="produtos.css">
     <title>Produtos</title>
 </head>
 <body>
@@ -15,9 +15,9 @@
 
             <nav>
                 <ul>
-                    <li><a href="/HTML5-CSS3-Part.1/index.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="produtos.html">Produtos</a></li>
-                    <li><a href="/HTML5-CSS3-Part.1/contato/contato.html">Contato</a></li>
+                    <li><a href="contato.html">Contato</a></li>
                 </ul>
             </nav>
         </div>
