--- a/HTML5-CSS3-Part.1/index.html
+++ b/HTML5-CSS3-Part.1/index.html
@@ -3,15 +3,16 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Barbearia Alura</title>
+
 		<link rel="stylesheet" href="reset.css">
-		<link rel="stylesheet" href="produtos.css">
+		<link rel="stylesheet" href="style.css">
 	</head>
 
 	<body>
 		<header>
 			<div class="caixa">
-				<h1><img src="logo.png" alt=""></h1>
-	
+				<h1><img src="logo.png"></h1>
+
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
@@ -26,10 +27,10 @@
 
 		<main>
 			<section class="principal">
-				<h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
+				<h2 class="titulo-principal">Sobre a Barbearia Alura</h2>
 
-				<img class="utensilios" src="utensilios.jpg" alt="Utensilios de Barbeiro">
-
+				<img class="utensilios" src="utensilios.jpg" alt="Utensilios de um barbeiro.">
+		 
 				<p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
 				<p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
@@ -38,7 +39,7 @@
 			</section>
 
 			<section class="beneficios">
-				<h3 class="titulo-centralizado">Benefícios</h3>
+				<h3 class="titulo-principal">Benefícios</h3>
 
 				<ul>
 					<li class="itens">Atendimento aos Clientes</li>
@@ -52,8 +53,8 @@
 		</main>
 
 		<footer>
-			<img src="logo-branco.png" alt="logo da barbearia Alura">
-			<p class="copyright">&copy; Copyright Barbearia Alura - 2022</p>
+			<img src="logo-branco.png">
+			<p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
 		</footer>
 	</body>
 </html>
