--- a/HTML5-CSS3-Part.1/produtos.html
+++ b/HTML5-CSS3-Part.1/produtos.html
@@ -1,54 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="produtos.css">
-    <title>Produtos</title>
-</head>
-<body>
-    <header>
-        <div class="caixa">
-            <h1><img src="logo.png" alt=""></h1>
+<html>
+	<head>
+		<meta charset="UTF-8">
+		<title>Produtos - Barbearia Alura</title>
 
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="produtos.html">Produtos</a></li>
-                    <li><a href="contato.html">Contato</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+		<link rel="stylesheet" href="reset.css">
+		<link rel="stylesheet" href="style.css">
+	</head>
+	<body>
+		<header>
+			<div class="caixa">
+				<h1><img src="logo.png"></h1>
 
-    <main>
-        <ul class="produtos">
-            <li>
-                <h2>cabelo</h2>
-                <img src="cabelo.jpg" alt="corte de cabelo">
-                <p class="descricao">Na tesoura ou máquina, como o cliente preferir</p>
-                <p class="valor">R$ 25,00</p>
-            </li>
-            <li>
-                <h2>barba</h2>
-                <img src="barba.jpg" alt="corte de barba">
-                <p class="descricao">Corte e desenho profissional de barba</p>
-                <p class="valor">R$ 18,00</p>
-            </li>
-            <li>
-                <h2>cabelo+barba</h2>
-                <img src="cabelo+barba.jpg" alt="corte de cabelo e barba">
-                <p class="descricao">Pacote completo de cabelo e barba</p>
-                <p class="valor">R$ 35,00</p>
-            </li>
-        </ul>
-    </main>
+				<nav>
+					<ul>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="produtos.html">Produtos</a></li>
+						<li><a href="contato.html">Contato</a></li>
+					</ul>
+				</nav>
+			</div>
+		</header>
 
-    <footer>
-        <img src="logo-branco.png" alt="logo da barbearia Alura">
-        <p class="copyright">&copy; Copyright Barbearia Alura - 2022</p>
-    </footer>
-</body>
+		<main>
+			<ul class="produtos">
+				<li>
+					<h2>Cabelo</h2>
+					<img src="cabelo.jpg">
+					<p class="produto-descricao">Na tesoura ou máquina, como o cliente preferir</p>
+					<p class="produto-preco">R$ 25,00</p>
+				</li>
+				<li>
+					<h2>Barba</h2>
+					<img src="barba.jpg">
+					<p class="produto-descricao">Corte e desenho profissional de barba</p>
+					<p class="produto-preco">R$ 18,00</p>
+				</li>
+				<li>
+					<h2>Cabelo + Barba</h2>
+					<img src="cabelo+barba.jpg">
+					<p class="produto-descricao">Pacote completo de cabelo e barba</p>
+					<p class="produto-preco">R$ 35,00</p>
+				</li>
+			</ul>
+		</main>
+
+		<footer>
+			<img src="logo-branco.png">
+			<p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
+		</footer>
+	</body>
 </html>
