--- a/HTML5-CSS3-Part.1/index.html
+++ b/HTML5-CSS3-Part.1/index.html
@@ -38,17 +38,29 @@
 				<p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
 			</section>
 
+			<section class="mapa">
+				<h3 class="titulo-principal">Nosso estabelecimento</h3>
+				<p>Nosso estabelecimento está localizado no coração da cidade.</p>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.449977466553!2d-46.634520585696485!3d-23.5881898684672!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5a2b2ed7f3a1%3A0xab35da2f5ca62674!2sAlura%20-%20Escola%20Online%20de%20Tecnologia!5e0!3m2!1spt-BR!2sbr!4v1670955430430!5m2!1spt-BR!2sbr" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+			</section>
+
 			<section class="beneficios">
 				<h3 class="titulo-principal">Benefícios</h3>
 
-				<ul>
-					<li class="itens">Atendimento aos Clientes</li>
-					<li class="itens">Espaço diferenciado</li>
-					<li class="itens">Localização</li>
-					<li class="itens">Profissionais Qualificados</li>
-				</ul>
+				<div class="conteudo-beneficios">
+					<ul class="">
+						<li class="itens">Atendimento aos Clientes</li>
+						<li class="itens">Espaço diferenciado</li>
+						<li class="itens">Localização</li>
+						<li class="itens">Profissionais Qualificados</li>
+					</ul>
+	
+					<img src="beneficios.jpg" class="imagembeneficios">
+				</div>
 
-				<img src="beneficios.jpg" class="imagembeneficios">
+				<div class="video">
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/f9hozm9V7qo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				</div>
 			</section>
 		</main>
 
