--- a/introducao-javascript/index.html
+++ b/introducao-javascript/index.html
@@ -73,6 +73,6 @@
 
 			</section>
 		</main>
-		<script src="/js/principal.js"></script>
+		<script src="./js/principal.js"></script>
 	</body>
 </html>
