--- a/introducao-javascript/teste/index.html
+++ b/introducao-javascript/teste/index.html
@@ -12,9 +12,6 @@
 
     <div id="divA">Isto é<span>algum</span> texto!</div>
     
-    <script>
-        var a = document.querySelector("#lorem");
-        console.log(a);
-    </script>
+    <script src="n.js"></script>
 </body>
 </html>
