--- a/introducao-javascript/index.html
+++ b/introducao-javascript/index.html
@@ -38,7 +38,7 @@
 							<td class="info-imc">0</td>
 						</tr>
 
-						<tr class="paciente" id="primeiro-paciente" >
+						<tr class="paciente">
 							<td class="info-nome">João</td>
 							<td class="info-peso">80</td>
 							<td class="info-altura">1.72</td>
