--- a/introducao-javascript/teste/index.html
+++ b/introducao-javascript/teste/index.html
@@ -7,10 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 class="teste">teste</h1>
-    <p id="lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore sint qui asperiores iure veniam neque, eaque modi. Aliquid facere, dolores saepe ratione suscipit quibusdam? Harum ea veniam reiciendis enim eius.</p>
-
-    <div id="divA">Isto é<span>algum</span> texto!</div>
+    <ul class="lista-produtos">
+        <li class="produto">Web cam</li>
+        <li class="produto">Microfone</li>
+        <li class="produto">Fundo verde</li>
+        <li class="produto">Notebook</li>
+    </ul>
     
     <script src="n.js"></script>
 </body>
