--- a/introducao-javascript/index.html
+++ b/introducao-javascript/index.html
@@ -30,7 +30,7 @@
 						</tr>
 					</thead>
 					<tbody id="tabela-pacientes">
-						<tr class="paciente" >
+						<tr class="paciente" id="primeiro-paciente">
 							<td class="info-nome">Paulo</td>
 							<td class="info-peso">100</td>
 							<td class="info-altura">2.00</td>
@@ -38,7 +38,7 @@
 							<td class="info-imc">0</td>
 						</tr>
 
-						<tr class="paciente">
+						<tr class="paciente" id="paciente">
 							<td class="info-nome">João</td>
 							<td class="info-peso">80</td>
 							<td class="info-altura">1.72</td>
