--- a/introducao-javascript/teste/index.html
+++ b/introducao-javascript/teste/index.html
@@ -6,14 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <ul class="lista-produtos">
-        <li class="produto">Web cam</li>
-        <li class="produto">Microfone</li>
-        <li class="produto">Fundo verde</li>
-        <li class="produto">Notebook</li>
-    </ul>
-    
-    <script src="n.js"></script>
+<input class="frase"><button class="botao">Copiar</button><span class="copia"></span>
+<script>
+    var inputFrase = document.querySelector('.frase');
+    var botao = document.querySelector('.botao');
+    var copia = document.querySelector('.copia');
+
+    function botaoHandler() {
+
+    copia.textContent = inputFrase.value;
+    inputFrase.value = '';
+}
+
+    botao.addEventListener('click', botaoHandler);
+ </script>
+    <!-- <script src="n.js"></script> -->
 </body>
 </html>
