separação dos arquivos js por funcionalidade

--- a/introducao-javascript/index.html
+++ b/introducao-javascript/index.html
@@ -28,7 +28,7 @@
                         <th>IMC</th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody id="tabela-pacientes">
                     <tr class="paciente">
                         <td class="info-nome">Paulo</td>
                         <td class="info-peso">100</td>
@@ -98,7 +98,8 @@
             <p>Copyright © 2021 Aparecida Nutrição</p>
         </div>
     </footer>
-    <script src="./js/principal.js"></script>
+    <script src="./js/calcula-imc.js"></script>
+    <script src="/js/form.js"></script>
 </body>
 </html>
 
