--- a/introducao-javascript/teste/index.html
+++ b/introducao-javascript/teste/index.html
@@ -6,20 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<input class="frase"><button class="botao">Copiar</button><span class="copia"></span>
+
+<h1 class="h1">Olá</h1>
+<h2 class="h2">Mundo</h2>
+<h3 class="h3">!</h3>
 <script>
-    var inputFrase = document.querySelector('.frase');
-    var botao = document.querySelector('.botao');
-    var copia = document.querySelector('.copia');
+    var a= document.querySelector(".h1");
+    a.innerHTML = "Hello"
 
-    function botaoHandler() {
+    var b = document.querySelector(".h2");
+    var World = 2
+    b.innerHTML = World; 
 
-    copia.textContent = inputFrase.value;
-    inputFrase.value = '';
-}
-
-    botao.addEventListener('click', botaoHandler);
- </script>
+    var c = document.querySelector("h3");
+    c.innerHTML = "!!!"
+</script>
     <!-- <script src="n.js"></script> -->
 </body>
 </html>
