Filtrando os pacientes da tabela

--- a/introducao-javascript/index.html
+++ b/introducao-javascript/index.html
@@ -18,6 +18,8 @@
 		<main>
 			<section class="container">
 				<h2>Meus pacientes</h2>
+				<Label for="filtrar-tabela">Filtre:</Label>
+				<input type="text" name="filtro" id="filtrar-tabela" placeholder="Digite o nome do paciente">
 				<table>
 					<thead>
 						<tr>
@@ -76,7 +78,7 @@
 		<section class="container">
 		    <h2 id="titulo-form">Adicionar novo paciente</h2>
 			<ul id="mensagens-erro">
-				
+
 			</ul>
 		    <form id="form-adiciona">
 		        <div class="">
@@ -103,6 +105,7 @@
 		<script src="js/calcula-imc.js" ></script>
 		<script src="js/form.js" ></script>
 		<script src="js/remover-paciente.js"></script>
+		<script src="js/filtra.js"></script>
 		
 	</body>
 </html>
