--- a/introducao-javascript/index.html
+++ b/introducao-javascript/index.html
@@ -71,7 +71,10 @@
 						</tr>
 					</tbody>
 				</table>
+				//...
+   <button id="buscar-pacientes" class="botao bto-principal">Buscar Pacientes</button>
 
+</section>
 			</section>
 		</main>
 
@@ -106,6 +109,6 @@
 		<script src="js/form.js" ></script>
 		<script src="js/remover-paciente.js"></script>
 		<script src="js/filtra.js"></script>
-		
+		<script src="js/buscar-pacientes.js"></script>
 	</body>
 </html>
