Capturando erros de requisição, add retorno de erro e sucesso

--- a/introducao-javascript/index.html
+++ b/introducao-javascript/index.html
@@ -71,10 +71,9 @@
 						</tr>
 					</tbody>
 				</table>
-				//...
-   <button id="buscar-pacientes" class="botao bto-principal">Buscar Pacientes</button>
-
-</section>
+				<span id="success-ajax" class="invisivel style-success">Pacientes encontrados</span>
+				<span id="erro-ajax" class="invisivel style-erros">Erro ao buscar os pacientes</span>
+   				<button id="buscar-pacientes" class="botao bto-principal">Buscar Pacientes</button>
 			</section>
 		</main>
 
