desenhando no template

--- a/Layouts com Grid/index.html
+++ b/Layouts com Grid/index.html
@@ -8,9 +8,7 @@
     <title>AluraCast</title>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw=="crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./src/assets/style/base.css">
-    <link rel="stylesheet" href="./src/assets/style/grid/index.css">
-    <link rel="stylesheet" href="./src/assets/style/responsivo.css">
+    <link rel="stylesheet" href="./src/assets/style/style.css">
 </head>
 
 <body>
@@ -19,7 +17,7 @@
         <button class="cabecalho__botao"><img src="./src/assets/img/seta-voltar.svg" alt="Seta voltar"></button>
         <button class="cabecalho__botao"><img src="./src/assets/img/seta-avançar.svg" alt="Seta avancar"></button>
     </header>
-
+c
     <aside class="menu-lateral">
         <h1 class="menu-lateral__logo"><img src="src/assets/img/alura-Cast_logo.svg" alt="Logotipo da AluraCast"></h1>
         <nav>
