--- a/Layouts com Grid/index.html
+++ b/Layouts com Grid/index.html
@@ -92,7 +92,7 @@ c
                     <h3 class="cartao__titulo">Github e nossas Funcionalidades Preferidas</h3>
                     <h4 class="cartao__subtitulo">Hipsters Ponto Tech</h4>
                 </li>
-                <!--<li class="cartao">
+                <li class="cartao">
                     <img class="cartao__imagem" src="./src/assets/img/hipsters-4.svg" alt="">
                     <h3 class="cartao__titulo">Android Jetpack</h3>
                     <h4 class="cartao__subtitulo">Hipsters Ponto Tech</p>
@@ -116,7 +116,7 @@ c
                     <img class="cartao__imagem" src="./src/assets/img/hipsters-8.svg" alt="">
                     <h3 class="cartao__titulo">Educação, Tecnologia e Periferia</h3>
                     <h4 class="cartao__subtitulo">Hipsters Ponto Tech</p>
-                </li>-->
+                </li>
             </ul>
         </section>
 
@@ -129,7 +129,7 @@ c
                     <h3 class="cartao__titulo">Montando seu estúdio</h3>
                     <h4 class="cartao__subtitulo">Layers Ponto Tech</h4>
                 </li>
-                <!--<li class="cartao">
+                <li class="cartao">
                     <img class="cartao__imagem" src="./src/assets/img/scuba-2.svg" alt="">
                     <h3 class="cartao__titulo">Voltando ao mercado após a maternidade</h3>
                     <h4 class="cartao__subtitulo">Scuba Ponto Dev</h4>
@@ -153,7 +153,7 @@ c
                     <img class="cartao__imagem" src="./src/assets/img/boss-2.svg" alt="">
                     <h3 class="cartao__titulo">Mariana Vasconcelos: CEO Agrosmart</h3>
                     <h4 class="cartao__subtitulo">Like a Boss</h4>
-                </li>-->
+                </li>
             </ul>
         </section>
 
@@ -171,7 +171,7 @@ c
                     <h3 class="cartao__titulo">Agile Coach e Desenvolvedor</h3>
                     <h4 class="cartao__subtitulo">Dev sem Fronteiras</h4>
                 </li>
-                <!--<li class="secao__cartao cartao">
+                <li class="secao__cartao cartao">
                     <img class="cartao__imagem" src="./src/assets/img/fronteiras-4.svg" alt="">
                     <h3 class="cartao__titulo">Desenvolvedor</h3>
                     <h4 class="cartao__subtitulo">Dev sem Fronteiras</h4>
@@ -190,7 +190,7 @@ c
                     <img class="cartao__imagem" src="./src/assets/img/fronteiras-7.svg" alt="">
                     <h3 class="cartao__titulo">Engenheiro de Software</h3>
                     <h4 class="cartao__subtitulo">Dev sem Fronteiras</h4>
-                </li>-->
+                </li>
             </ul>
         </section>
     </main>
