Adicionado while ao app

--- a/Logica de Programação/logica-js-projeto_inicial/index.html
+++ b/Logica de Programação/logica-js-projeto_inicial/index.html
@@ -26,8 +26,8 @@
         </div>
     </div>
     <script src="app.js" defer></script>
-    <script src="ex1.js"></script>
-    <script src="ex2.js"></script>
+    <!-- <script src="ex1.js"></script>
+    <script src="ex2.js"></script> -->
 </body>
 
 </html>
