utilização do break

--- a/Logica de Programação/logica-js-projeto_inicial/index.html
+++ b/Logica de Programação/logica-js-projeto_inicial/index.html
@@ -25,9 +25,9 @@
             </div>
         </div>
     </div>
-    <!-- <script src="app.js" defer></script> -->
+    <script src="app.js" defer></script>
     <!-- <script src="ex1.js"></script> -->
-    <script src="ex2.js"></script>
+    <!-- <script src="ex2.js"></script> -->
 </body>
 
 </html>
